[package]
name = "gssapi"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]

[features]
services4user = ["gssapi-sys/services4user"]
unstable-testing = ["clippy"]

[dependencies]
gssapi-sys = { version = "*", path = "gssapi-sys" }
clippy = { version = "^0.*", optional = true }

[dev-dependencies]
resolve = "^0.1.2"
tempdir = "^0.3"

[[test]]
name = "test"
path = "tests/test.rs"
