[package]
name = "gssapi"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]

[features]
services4user = ["gssapi-sys/services4user"]
unstable-testing = ["clippy", "k5test/clippy"]

[dependencies]
gssapi-sys = { version = "*", path = "gssapi-sys" }
clippy = { version = "^0.*", optional = true }

[dev-dependencies]
k5test = { version = "*", path = "k5test" }
resolve = "^0.1.2"
